Correct error with positioning of the timer and restart button on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,7 +366,7 @@ p {
     /* reduced even spacing */
     width: 95vw;
     /* shrink container slightly */
-    height: 80vh;
+    height: 70vh;
     /* shrink grid height */
     margin: auto;
     /* center the grid */
